--- a/src/pages/Lists/styles.css
+++ b/src/pages/Lists/styles.css
@@ -113,7 +113,7 @@ form button[type="submit"]:hover {
   flex-grow: 1,
 }
 .menu{
-  background-color: #1f7fc0 !important;
+  background-color: #343a40 !important;
   margin-bottom: 15px;
 }
 .menuTitle {
