--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -12,7 +12,7 @@
 .register-container .content {
   width: 100%;
   padding: 96px;
-  background: #f0f0f5;
+  background: #303035;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 
@@ -33,7 +33,7 @@
 
 .register-container .content section p {
   font-size: 18px;
-  color: #737380;
+  color: #fafafa;
   line-height: 32px;
 }
 
@@ -52,4 +52,9 @@
 
 .register-container .content form .input-group input + input {
   margin-left: 8px;
+}
+
+.icon-alert{
+  margin-bottom: -4px;
+  margin-right: 5px;
 }
