--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -10,6 +10,7 @@
 }
 
 .logon-container section.form {
+  background: #303035;
   width: 100%;
   max-width: 350px;
   margin-right: 30px;
@@ -18,4 +19,8 @@
 .logon-container section.form form h1 {
   font-size: 32px;
   margin-bottom: 32px;
+}
+
+.inline{
+  display: inline-flex;
 }
