Commit de desespero à pedido do Maicão

--- a/src/pages/Lists/styles.css
+++ b/src/pages/Lists/styles.css
@@ -77,6 +77,20 @@ form button[type="submit"] {
   transition: background 0.5s;
 }
 
+form button[type="submit"] {
+  width: 100%;
+  border: 0;
+  margin-top: 30px;
+  background: #3498db;
+  border-radius: 2px;
+  padding: 15px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.5s;
+}
+
 form button[type="submit"]:hover {
   background: #1f7fc0;
 }
