--- a/src/global.css
+++ b/src/global.css
@@ -19,21 +19,31 @@ h1, p{
 }
 
 input, button, textarea {
-  font: 400 18px Roboto, sans-serif;
+  font: 400 15px Roboto, sans-serif;
+  font-weight: 100;
 }
 
 button {
   cursor: pointer;
 }
 
+#root .MuiGrid-item{
+  padding: 0px 5px;
+}
+
 form input {
   width: 100%;
-  height: 60px;
-  color: #333;
-  border: 1px solid #dcdce6;
-  border-radius: 8px;
-  padding: 0 24px;
-  margin-bottom: 20px;
+  height: 45px;
+  color: #fafafa;
+  border: 1px solid #232323;
+  border-radius: 2px;
+  background: #27272d;
+  padding: 0px 8px;
+  margin-bottom: 10px;
+}
+
+form input::placeholder{
+  color: #cccccc;
 }
 
 form textarea {
@@ -49,7 +59,6 @@ form textarea {
 
 .button {
   width: 100%;
-  height: 60px;
   background: #3498db;
   border: 0;
   border-radius: 8px;
@@ -88,4 +97,44 @@ form textarea {
 
 .mr-text-dark{
   color: #444;
+}
+
+.mr-text-light{
+  color: #fafafa;
+  margin-bottom: 10px;
+}
+
+.mr-font-weight-200{
+  font-weight: 200;
+}
+
+/* Input Form */
+
+#root .MuiFormControl-root{
+  width: 100%;
+}
+
+#root .MuiInputBase-input{
+  color: #fafafa;
+  background-color: #27272d;
+}
+
+#root .MuiOutlinedInput-root{
+  margin-bottom: 10px;
+}
+
+#root .MuiInput-underline:after {
+  border-bottom-color: #3498db;;
+}
+
+#root .MuiInputLabel-animated{
+  color: #fafafa;
+}
+
+#root .MuiFormLabel-root.Mui-focused{
+  color:#3498db;
+}
+
+#root .MuiInput-underline:before{
+  border-color: rgb(88 88 101);
 }
