--- a/src/global.css
+++ b/src/global.css
@@ -5,7 +5,7 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
-  line-break: anywhere;
+  line-break: normal;
 }
 
 body {
@@ -30,6 +30,8 @@ button {
 
 #root .MuiGrid-item{
   padding: 0px 5px;
+  margin-bottom: 15px;
+  width: 100%;
 }
 
 form input {
