--- a/src/global.css
+++ b/src/global.css
@@ -115,6 +115,8 @@ form textarea {
 
 #root .MuiFormControl-root{
   width: 100%;
+  /* padding-left: 0;
+  padding-right: 0; */
 }
 
 #root .MuiInputBase-input{
