--- a/src/global.css
+++ b/src/global.css
@@ -230,7 +230,7 @@ input:-internal-autofill-selected {
 .spinner {
     background: #000000b3;
     position: fixed;
-    z-index: 1000;
+    z-index: 10000;
     height: 100%;
     text-align: center;
     width: 100%;
@@ -244,7 +244,7 @@ input:-internal-autofill-selected {
 
 .spinner .MuiCircularProgress-root {
     top: 50%;
-    left: 44%;
+    left: 49%;
     position: absolute;
 }
 
@@ -306,9 +306,10 @@ input:-internal-autofill-selected {
 #root .download-progress {
     position: fixed;
     top: 0px;
-    width: 88%;
+    right: auto;
+    width: 88.5%;
     background: #000000cf;
-    z-index: 10;
+    z-index: 10000;
     height: 100%;
 }
 
