--- a/src/pages/Admin/Usuario/style.css
+++ b/src/pages/Admin/Usuario/style.css
@@ -5,6 +5,12 @@
     background-color: #007bff;
 }
 
+#root .MuiFab-secondary {
+    position: absolute;
+    bottom: 20%;
+    right: 4%;
+}
+
 #root .MuiFab-primary:hover {
     background-color: #0066d3;
 }
