--- a/src/global.css
+++ b/src/global.css
@@ -128,6 +128,11 @@ form textarea {
 
 /* Input Form */
 
+#root .MuiContainer-root {
+    width: 100%;
+    max-width: 100%;
+}
+
 #root .MuiFormControl-root {
     width: 100%;
     /* padding-left: 0;
@@ -135,9 +140,10 @@ form textarea {
 }
 
 #root .MuiInputBase-input {
-    color: #fafafa;
-    background-color: #27272d;
+    background-color: #27272d !important;
     padding: 15px;
+    border: 1px solid #1d1d21;
+    color: #fff;
 }
 
 #root .MuiOutlinedInput-root {
@@ -339,4 +345,41 @@ input:-internal-autofill-selected {
 
 .form-control[type=file] {
     padding: 10px 15px;
+}
+
+.MuiSelect-select:focus {
+    background-color: #fff !important;
+}
+
+
+/**
+* #.# Scrollbar
+**/
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #202027;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: rgb(52, 52, 63);
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
