--- a/src/global.css
+++ b/src/global.css
@@ -320,7 +320,7 @@ input:-internal-autofill-selected {
 }
 
 .MuiGrid-item {
-    padding: 12px 8px;
+    padding: 8px;
 }
 
 #root .download-progress {
@@ -337,6 +337,11 @@ input:-internal-autofill-selected {
     top: 50%;
     width: 50%;
     margin: auto;
+}
+
+#root .MuiDataGrid-root {
+    width: 100%;
+    overflow: auto;
 }
 
 #root .MuiDataGrid-root .MuiDataGrid-row {
